fix flickering on click

--- a/css/new.scss
+++ b/css/new.scss
@@ -85,7 +85,7 @@ somewhere in this file or whatever one you want to have it go into */
 
 @keyframes blink {  
     0% { stroke:#222; }
-    25% { stroke:#fff; }
+    // 25% { stroke:#fff; }
     100% { stroke:#fff; }
 }
 
@@ -93,43 +93,43 @@ somewhere in this file or whatever one you want to have it go into */
   stroke: #fff;
 }
 
-// #c1 {
-//   animation-name: blink;
-//   animation-duration: .5s;
-//   animation-delay: 2s;
-//   animation-iteration-count: infinite;
-// }
+#c1 {
+  animation-name: blink;
+  animation-duration: 1s;
+  animation-delay: 1s;
+  animation-iteration-count: 1;
+}
 
 #l {
   animation-name: blink;
-  animation-duration: .5s;
-  // animation-delay: 2.7s;
-  animation-delay: .7s;
-  animation-iteration-count: infinite;
+  animation-duration: 1s;
+  animation-delay: 2s;
+  // animation-delay: .7s;
+  animation-iteration-count: 1;
 }
 
-// #i {
-//   animation-name: blink;
-//   animation-duration: .5s;
-//   animation-delay: 3.2s;
-//   animation-iteration-count: infinite;
-// }
+#i {
+  animation-name: blink;
+  animation-duration: 1s;
+  animation-delay: 3s;
+  animation-iteration-count: 1;
+}
 
 #c2 {
   animation-name: blink;
-  // animation-duration: .5s;
-  animation-duration: 1.3s;
-  // animation-delay: 3.9s;
-  animation-delay: 1.5s;
-  animation-iteration-count: infinite;
+  animation-duration: 1s;
+  // animation-duration: 1.3s;
+  animation-delay: 4s;
+  // animation-delay: 1.5s;
+  animation-iteration-count: 1;
 }
 
-// #k {
-//   animation-name: blink;
-//   animation-duration: .5s;
-//   animation-delay: 4.6s;
-//   animation-iteration-count: infinite;
-// }
+#k {
+  animation-name: blink;
+  animation-duration: 1s;
+  animation-delay: 5s;
+  animation-iteration-count: 1;
+}
 
 .style1 {
   fill:none;
